--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,8 +1,8 @@
 ---
-name: Tails Azimuth
+name: Lâm Quang Vinh
 avatar: /static/images/avatar.png
 occupation: Professor of Atmospheric Science
-company: Stanford University
+company: Hanoi University of Science and Technology
 email: address@yoursite.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
