--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,14 @@
 ---
 name: Lâm Quang Vinh
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Hanoi University of Science and Technology
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+avatar: /static/images/avatar.jpg
+occupation: Fullstack Developer at CMC Global
+company: CMC Global
+email: vinhlq2512@gmail.com
+facebook: https://twitter.com/Twitter
+linkedin: https://www.linkedin.com/in/lqvinh2512/
+github: https://github.com/vinhlq2512
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+As a passionate Fullstack Developer at CMC Global, I specialize in .NET Core, SQL optimization, and modern frontend technologies such as Blazor and Next.js. I enjoy building scalable, high-performance web systems that deliver real value to users and businesses.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Currently pursuing a Master’s degree in Computer Science at Hanoi University of Science and Technology, I continuously explore advanced technologies to enhance both backend architecture and user experience. My goal is to become a versatile engineer capable of bridging system efficiency with creative frontend solutions.
